--- a/UniversityApp/src/app/admin/dashboard/dashboard.component.html
+++ b/UniversityApp/src/app/admin/dashboard/dashboard.component.html
@@ -2,20 +2,20 @@
     <div class="row row-1">
         <div class="col">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header bg-warning">
                     Departments
                 </div>
                 <div class="card-body">
                  
                     <h5 class="card-title">{{ departmentCount }}</h5>
                     <p class="card-text">Number of Departments</p>
-                    <a class="gobutton" routerLink="/admin_DepartmentInfo">Go</a>
+                    <a class="btn btn-primary" routerLink="/admin_DepartmentInfo">Go</a>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header bg-danger">
                     Branch
                 </div>
                 <div class="card-body">
@@ -27,7 +27,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header bg-success">
                     Courses
                 </div>
                 <div class="card-body">
@@ -42,7 +42,7 @@
     <div class="row row-2">
         <div class="col">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header bg-info">
                     Student
                 </div>
                 <div class="card-body">
@@ -54,7 +54,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header bg-secondary">
                     Faculty
                 </div>
                 <div class="card-body">
